# voice_simple

./: .flutter-plugins-dependencies  .gitignore  AUDIOCONTEXT_IMPLEMENTATION_SUMMARY.md  AUTO_TTS_IMPLEMENTATION.md  README.md  ROBUSTNESS_PLAN.md  TODO.md  VOICE_AI_FEATURES_ROADMAP.md  WEBSOCKET_TROUBLESHOOTING.md  app.py  openai_handler.py  pubspec.yaml  pyproject.toml  requirements.txt  voice_thing.py
.cursor/rules/: .agent_rules.mdc  dart-style.mdc  dev-loop.mdc  python-style.mdc  rule-writer.mdc  sonnet.mdc
backend/: app.py  audio_diagnostics_report.json  check_server.py  crackling_diagnostics_report.json  requirements.txt  run_all_tests.py  test_audio_context_fix.py  test_crackling_diagnostics.py  test_deep_diagnostics.py  test_frame_sizes.py  test_pipeline_logic.py  test_simple.py  test_summary.md  test_timing_fix.py  test_unified_pipeline.py
backend/config/: __init__.py  settings.py
backend/routes/: __init__.py
backend/services/: __init__.py  openai_handler.py  (+2 more)
docs/: AUDIO_UNDERRUN_FIX.md  CRACKLING_FIX_SUMMARY.md  IIR_AUDIO_SMOOTHING.md  VOICE_AGENT_APPLICATION_ARCHITECTURE.md  VOICE_INTEGRATION_COMPLETE.md  VOICE_TO_TEXT_PLAN.md
flutter_voice_app/: README.md  pubspec.yaml
frontend/: .flutter-plugins  .flutter-plugins-dependencies  AUDIOCONTEXT_FIX_GUIDE.md  AUDIO_DEBUG_PLAN.md  AUDIO_TEST_README.md  CURRENT_AUDIO_STRATEGY.md  FLUTTER_SETUP.md  README.md  audio_streaming_test_results.json  pubspec.yaml  run_audio_test.sh  test_audio_context.dart  test_audio_streaming.dart
scripts/: run_backend.sh  run_frontend.sh
templates/: index.html
(+37 files in other folders)
